# wsgi-dealer

./: Dockerfile  README.md  pyproject.toml  test.py
samples/: sample_handler.py  sample_tcp.py
src/: api.py  app.py  basic.py
wsgi-server/: app.py  server_blocking.py  server_nonblocking.py
