[tool.poetry]
name = "wsgi-dealer"
version = "0.1.0"
description = ""
authors = ["Bo Manev <bomanev@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
requests = "^2.31.0"
webob = "^1.8.7"
gunicorn = "^21.2.0"
parse = "^1.20.0"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
